--- a/2columnlayout.html
+++ b/2columnlayout.html
@@ -4,6 +4,7 @@
         <title>2 column layout</title>
     </head>
     <link rel="stylesheet" href="2columnlayout.css"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
         <div id="wrap">
             <div id="header"><h1> Column header</h1></div>
