--- a/2columnlayout.html
+++ b/2columnlayout.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>2 column layout</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=100%">
         <link rel="stylesheet" href="2columnlayout.css"> 
     </head>
     <body>
