--- a/2columnlayout.html
+++ b/2columnlayout.html
@@ -12,6 +12,8 @@
                 <ul>
                     <li><a href="x">Option 1</a></li>
                     <li><a href="x">Option 2</a></li>
+                    <li><a href="x">Option 3</a></li>
+                    <li><a href="x">Option 4</a></li>
                 </ul>
             </div>
             <div id="main">
