--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>2 column layout</title>
+        <title>Home Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="2columnlayout.css"> 
+        <link rel="stylesheet" href="index.css"> 
     </head>
     <body>
         <div id="wrap">
             <div id="header"><h1> Column header</h1></div>
             <div id="nav">
                 <ul>
-                    <li><a href="x">Option 1</a></li>
-                    <li><a href="x">Option 2</a></li>
-                    <li><a href="x">Option 3</a></li>
-                    <li><a href="x">Option 4</a></li>
+                    <li><a href="isp.html">ISPs, Hosting and Domain Structure</a></li>
+                    <li><a href="clientmodels.html">Client server and P2P models</a></li>
+                    <li><a href="features.html">New Features of HTML5 and CSS 3</a></li>
+                    <li><a href="differences.html">Differences Between Server Side and Client Side Scripting</a></li>
+                    <li><a href="security.html">Security Considerations When Building A Website</a></li>
                 </ul>
             </div>
             <div id="main">
