--- a/features.html
+++ b/features.html
@@ -3,11 +3,11 @@
     <head>
         <title>New Features of HTML5 and CSS 3</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <link rel="stylesheet" href="x">   
+        <link rel="stylesheet" href="features.css">   
     </head>
     <body>
         <div id="wrap">
-            <div id="header"><h1> Column header</h1></div>
+            <div id="header"><h1>New Features of HTML5 and CSS 3</h1></div>
             <div id="nav"></div>
             <ul>
                 <li><a href="index.html">Home Page</a></li>
@@ -15,6 +15,7 @@
                 <li><a href="clientmodels.html">Client server and P2P models</a></li>
                 <li><a href="differences.html">Differences Between Server Side and Client Side Scripting</a></li>
                 <li><a href="security.html">Security Considerations When Building A Website</a></li>
+                <li><a href="references.html">References</a></li>
             </ul>
         </div>
         <div id="main">
