--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <li><a href="features.html">New Features of HTML5 and CSS 3</a></li>
                     <li><a href="differences.html">Differences Between Server Side and Client Side Scripting</a></li>
                     <li><a href="security.html">Security Considerations When Building A Website</a></li>
+                    <li><a href="references.html">References</a></li>
                 </ul>
             </div>
             <div id="main">
