--- a/references.html
+++ b/references.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Differences Between Server Side and Client Side Scripting</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-        <link rel="stylesheet" href="differences.css">
+        <title>Client server and P2P models</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="references.css">    
     </head>
     <body>
         <div id="wrap">
-            <div id="header"><h1>Differences Between Server Side and Client Side Scripting</h1></div>
+            <div id="header"><h1>Reference List</h1></div>
             <div id="nav"></div>
             <ul>
                 <li><a href="index.html">Home Page</a></li>
                 <li><a href="isp.html">ISPs, Hosting and Domain Structure</a></li>
                 <li><a href="clientmodels.html">Client server and P2P models</a></li>
                 <li><a href="features.html">New Features of HTML5 and CSS 3</a></li>
+                <li><a href="differences.html">Differences Between Server Side and Client Side Scripting</a></li>
                 <li><a href="security.html">Security Considerations When Building A Website</a></li>
-                <li><a href="references.html">References</a></li>
             </ul>
         </div>
         <div id="main">
