--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id="wrap">
             <div id="header"><h1> Column header</h1></div>
             <div id="nav">
-                <ul>
+                <ul id="nav_ul">
                     <li><a href="isp.html">ISPs, Hosting and Domain Structure</a></li>
                     <li><a href="clientmodels.html">Client server and P2P models</a></li>
                     <li><a href="features.html">New Features of HTML5 and CSS 3</a></li>
@@ -21,6 +21,7 @@
             <div id="main">
                 <h2>Column 1 </h2>
                 <p>Text goes here</p>
+                
             </div>
             <div id="sidebar">
                 <h2>Column 2</h2>
