updated nav and colours

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="wrap">
-            <div id="header"><h1> Column header</h1></div>
+            <div id="header"><h1> Assignment Website Homepage</h1></div>
             <div id="nav">
                 <ul id="nav_ul">
                     <li><a href="isp.html">ISPs, Hosting and Domain Structure</a></li>
@@ -26,23 +26,15 @@
             <div id="sidebar">
                 <h2>Column 2</h2>
                 <p>Text for column 2</p>
-                <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">link 2</a></li>
-                </ul>
             </div>
             <div>
                 <div id="sidebar2">
                     <h2>column3</h2>
                     <p>This is column 3</p>
-                    <ul>
-                        <li><a href="#">link 3</a></li>
-                        <li><a href="#">Link 2</a></li>
-                    </ul>
                 </div>
             </div>
             <div id="footer">
-                <p>footer</p>
+                <p>Name and CWA ID go in here.</p>
                 </div>
         </div>
     </body>
