--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div id="footer">
-                <p>Name and CWA ID go in here.</p>
+                <p>Name and date go in here.</p>
                 </div>
         </div>
     </body>
