--- a/features.html
+++ b/features.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>New Features of HTML5 and CSS 3</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <link rel="stylesheet" href="features.css">   
+        <title>Features of HTML5 and CSS3</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="index.css"> 
     </head>
     <body>
         <div id="wrap">
-            <div id="header"><h1>New Features of HTML5 and CSS 3</h1></div>
-            <div id="nav"></div>
-            <ul>
-                <li><a href="index.html">Home Page</a></li>
-                <li><a href="isp.html">ISPs, Hosting and Domain Structure</a></li>
-                <li><a href="clientmodels.html">Client server and P2P models</a></li>
-                <li><a href="differences.html">Differences Between Server Side and Client Side Scripting</a></li>
-                <li><a href="security.html">Security Considerations When Building A Website</a></li>
-                <li><a href="references.html">References</a></li>
-            </ul>
-        </div>
-        <div id="main">
-            <h2>Column 1 </h2>
-            <p>Text goes here</p>
-        </div>
-        <div id="sidebar">
-            <h2>Column 2</h2>
-            <p>Text for column 2</p>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">link 2</a></li>
-            </ul>
-        </div>
-        <div id="footer">
-            <p>footer</p>
+            <div id="header"><h1> Features of HTML5 and CSS3</h1></div>
+            <div id="nav">
+                <ul id="nav_ul">
+                    <li><a href="index.html">Home Page</a></li>
+                    <li><a href="isp.html">ISPs, Hosting and Domain Structure</a></li>
+                    <li><a href="clientmodels.html">Client server and P2P models</a></li>
+                    <li><a href="features.html">New Features of HTML5 and CSS 3</a></li>
+                    <li><a href="differences.html">Differences Between Server Side and Client Side Scripting</a></li>
+                    <li><a href="security.html">Security Considerations When Building A Website</a></li>
+                    <li><a href="references.html">References</a></li>
+                </ul>
             </div>
+            <div id="main">
+                <h2>Column 1 </h2>
+                <p>Text goes here</p>
+                
+            </div>
+            <div id="sidebar">
+                <h2>Column 2</h2>
+                <p>Text for column 2</p>
+            </div>
+            <div>
+                <div id="sidebar2">
+                    <h2>column3</h2>
+                    <p>This is column 3</p>
+                </div>
+            </div>
+            <div id="footer">
+                <p>Web Technologies - Assignment 1 - Bailey Ward 430726</p>
+                </div>
+        </div>
     </body>
 </html>
