--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <div id="header"><h1> Assignment Website Homepage</h1></div>
             <div id="nav">
                 <ul id="nav_ul">
+                    <li><a href="index.html">Home Page</a></li>
                     <li><a href="isp.html">ISPs, Hosting and Domain Structure</a></li>
                     <li><a href="clientmodels.html">Client server and P2P models</a></li>
                     <li><a href="features.html">New Features of HTML5 and CSS 3</a></li>
@@ -34,7 +35,7 @@
                 </div>
             </div>
             <div id="footer">
-                <p>Name and date go in here.</p>
+                <p>Web Technologies - Assignment 1 - Bailey Ward 430726</p>
                 </div>
         </div>
     </body>
