--- a/contactus.html
+++ b/contactus.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home Page</title>
+        <title>Contact Us</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css"> 
     </head>
     <body>
         <div id="wrap">
             <div id="logo"><h1> SportingKids</h1></div>
-            <div id="header"><h2>Home Page</h2></div>
+            <div id="header"><h2>Contact Us</h2></div>
             <div id="nav">
                 <ul id="nav_ul">
                     <li><a href="index.html">Home Page</a></li>
@@ -21,9 +21,15 @@
                 </ul>
             </div>
             <div id="main">
-                <h2>Welcome to SportingKids!</h2>
-                <p>Welcome to the SportingKids website, we are a non-profit charity which aims to lower obesity and tackle inactivity in the Norfolk area.</p>
-                <p>On our website, you will find all the information you need about us, what we do, our upcoming events, how to get involved and where we get our funding from.</p>
+                <h2>Our Contact Details</h2>
+                <p>Administrator:	Liz Thomson</p>
+                <p>Phone: 01553 765818</p>
+                <p>Email: admin@SportingKids.co.uk</p>
+                <p>Office: Tennyson Avenue, King’s Lynn, Norfolk, PE30 2QW</p>
+                <h3>Where Our Funding Comes From</h3>
+                <p>We are funded by the National Lottery and local businesses such as The College of West Anglia, Lynnsport and there is support from KES Academy.</p>
+                <p>We have access to Athlete Mentors which can be utilised in many ways, you can either get involved in one of our highly successful programmes or you can arrange a visit to your school for an event or specific mentoring.</p>
+                
             </div>
             <div id="footer">
                 <p>Web Technologies - Assignment 2 - Bailey Ward 430726</p>
@@ -31,4 +37,3 @@
         </div>
     </body>
 </html>
-
