--- a/news.html
+++ b/news.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home Page</title>
+        <title>News</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css"> 
     </head>
     <body>
         <div id="wrap">
             <div id="logo"><h1> SportingKids</h1></div>
-            <div id="header"><h2>Home Page</h2></div>
+            <div id="header"><h2>News</h2></div>
             <div id="nav">
                 <ul id="nav_ul">
                     <li><a href="index.html">Home Page</a></li>
@@ -21,9 +21,16 @@
                 </ul>
             </div>
             <div id="main">
-                <h2>Welcome to SportingKids!</h2>
-                <p>Welcome to the SportingKids website, we are a non-profit charity which aims to lower obesity and tackle inactivity in the Norfolk area.</p>
-                <p>On our website, you will find all the information you need about us, what we do, our upcoming events, how to get involved and where we get our funding from.</p>
+                <h2>Recent News</h2>
+                <p><b>Sport Around The World Weekend 24th – 25th October 2018</b></p>
+                <p>Following our recent successful coaching weekend where 25 children, aged between 10 and 16 took part in a round the World sports event.  This involved the children learning about and taking part in at least 3 different sports each day including: </p>
+                <ul>
+                    <li>Archery</li>
+                    <li>Base Jumping</li>
+                    <li>Beach Tennis</li>
+                    <li>Parkour</li>
+                </ul>
+                <p>A great time was had by all.</p>
             </div>
             <div id="footer">
                 <p>Web Technologies - Assignment 2 - Bailey Ward 430726</p>
@@ -31,4 +38,3 @@
         </div>
     </body>
 </html>
-
